--- a/recursos/index.html
+++ b/recursos/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Costos de Combustible - Correos</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -61,5 +62,6 @@
             
         </section>
     </main>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
