--- a/recursos/index.html
+++ b/recursos/index.html
@@ -62,6 +62,11 @@
             
         </section>
     </main>
-    <script src="js/main.js" defer></script>
+    <!-- para el SDM
+    <script src="js/service/gasto.service.js"></script>
+    <script src="js/data/gasto.data.js"></script>
+    <script src="js/model/GastoCombustible.js"></script>
+    -->
+    <script src="js/main.js"></script>
 </body>
 </html>
