--- a/recursos/index.html
+++ b/recursos/index.html
@@ -62,11 +62,11 @@
             
         </section>
     </main>
-    <!-- para el SDM
+    <!-- para el SDM innecesario, se pone type=module
     <script src="js/service/gasto.service.js"></script>
     <script src="js/data/gasto.data.js"></script>
     <script src="js/model/GastoCombustible.js"></script>
     -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
